--- a/db/nursingHomeDB.properties
+++ b/db/nursingHomeDB.properties
@@ -1,5 +1,5 @@
-#HSQL Database Engine 2.5.1
-#Mon May 23 08:53:47 CEST 2022
-modified=yes
-tx_timestamp=1848
-version=2.5.1
+#HSQL Database Engine 2.6.0
+#Mon Jun 20 07:24:43 UTC 2022
+tx_timestamp=2023
+modified=no
+version=2.6.0
