Caregiver sind nun sichtbar in der Anwendung und Login Seite wurde eingerichtet. Login ist noch nicht sichtbar vor der Eigentlichen Anwendung

--- a/db/nursingHomeDB.properties
+++ b/db/nursingHomeDB.properties
@@ -1,5 +1,5 @@
 #HSQL Database Engine 2.5.1
-#Mon Jun 20 15:01:18 CEST 2022
-modified=yes
-tx_timestamp=2136
+#Fri Jun 24 14:40:59 CEST 2022
+modified=no
+tx_timestamp=3503
 version=2.5.1
