--- a/db/nursingHomeDB.properties
+++ b/db/nursingHomeDB.properties
@@ -1,5 +1,5 @@
 #HSQL Database Engine 2.5.1
-#Fri Jun 24 14:40:59 CEST 2022
-modified=no
-tx_timestamp=3503
+#Mon Jun 27 10:00:36 CEST 2022
+modified=yes
+tx_timestamp=3681
 version=2.5.1
